Kernel/Modules: Allow to opt-out from compiling ATA IDE support
This allows to remove ATA IDE support in compile time, so it results in
a Kernel that discards about 308 Kilobytes from it. It also results in a
bit faster boot time.

However, this change creates lots of nice opportunities with discarding
unnecessary drivers in the Kernel for specfic platforms in compile time,
so users can choose to make their compiled Kernel smaller :)

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -96,9 +96,6 @@ set(KERNEL_SOURCES
     Storage/ATADevice.cpp
     Storage/ATADiskDevice.cpp
     Storage/ATAPIDiscDevice.cpp
-    Storage/BMIDEChannel.cpp
-    Storage/IDEController.cpp
-    Storage/IDEChannel.cpp
     Storage/RamdiskController.cpp
     Storage/RamdiskDevice.cpp
     Storage/StorageManagement.cpp
@@ -490,6 +487,8 @@ add_custom_command(
     COMMAND ${CMAKE_OBJCOPY} --add-gnu-debuglink=Kernel.debug Kernel
     BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/kernel.map
 )
+
+include("${CMAKE_CURRENT_LIST_DIR}/Modules.cmake")
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/Kernel" DESTINATION boot)
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/Kernel.debug" DESTINATION boot)
