Kernel/Modules: Allow to opt-out from compiling various network drivers

--- a/Kernel/config.ini.template
+++ b/Kernel/config.ini.template
@@ -1,3 +1,9 @@
 COMPILE_IDE=y
 COMPILE_AHCI=y
 COMPILE_RAMDISK=y
+
+COMPILE_E1000=y
+COMPILE_E1000E=y
+COMPILE_RTL8139=y
+COMPILE_RTL8168=y
+COMPILE_NE2000=y
