--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -143,6 +143,7 @@ jobs:
             -DCMAKE_C_COMPILER=gcc-10 \
             -DCMAKE_CXX_COMPILER=g++-10 \
             -DENABLE_ALL_DEBUG_FACILITIES=ON \
+            -DENABLE_ALL_KERNEL_MODULES=ON \
             -DENABLE_PCI_IDS_DOWNLOAD=OFF \
             -DENABLE_USB_IDS_DOWNLOAD=OFF
         if: ${{ matrix.debug-options == 'ALL_DEBUG' }}
@@ -157,6 +158,7 @@ jobs:
             -DCMAKE_C_COMPILER=gcc-10 \
             -DCMAKE_CXX_COMPILER=g++-10 \
             -DENABLE_UNDEFINED_SANITIZER=ON \
+            -DENABLE_ALL_KERNEL_MODULES=ON \
             -DENABLE_PCI_IDS_DOWNLOAD=OFF \
             -DENABLE_USB_IDS_DOWNLOAD=OFF
         if: ${{ matrix.debug-options == 'NORMAL_DEBUG' }}
