Kernel: Disable normally unused drivers from compiling into the image
This includes the Ramdisk support, E1000E, RTL8139, RTL8168, NE2000 and
Intel graphics support. These are not used under normal conditions when
testing the OS on QEMU, so these drivers are more relevant in a bare
metal setup and therefore should be enabled only if needed.

--- a/Kernel/config.ini.template
+++ b/Kernel/config.ini.template
@@ -1,13 +1,13 @@
 COMPILE_IDE=y
 COMPILE_AHCI=y
-COMPILE_RAMDISK=y
+COMPILE_RAMDISK=n
 
 COMPILE_E1000=y
-COMPILE_E1000E=y
-COMPILE_RTL8139=y
-COMPILE_RTL8168=y
-COMPILE_NE2000=y
+COMPILE_E1000E=n
+COMPILE_RTL8139=n
+COMPILE_RTL8168=n
+COMPILE_NE2000=n
 
 COMPILE_BOCHS_GRAPHICS=y
-COMPILE_INTEL_GRAPHICS=y
+COMPILE_INTEL_GRAPHICS=n
 COMPILE_VIRTIO_GRAPHICS=y
