Kernel: Decorate config template file with titles for each subsystem

--- a/Kernel/config.ini.template
+++ b/Kernel/config.ini.template
@@ -1,13 +1,16 @@
+# Storage Subsystem
 COMPILE_IDE=y
 COMPILE_AHCI=y
 COMPILE_RAMDISK=n
 
+# Networking Subsystem
 COMPILE_E1000=y
 COMPILE_E1000E=n
 COMPILE_RTL8139=n
 COMPILE_RTL8168=n
 COMPILE_NE2000=n
 
+# Graphics Subsystem
 COMPILE_BOCHS_GRAPHICS=y
 COMPILE_INTEL_GRAPHICS=n
 COMPILE_VIRTIO_GRAPHICS=y
