[DRAFT] SoundPlayer: Add support for WinAmp skins
There's nothing more quintessential 90s than skinnable music players,
and the classic WinAmp 2.x is the gold standard.

This patch contains a SoundPlayer hack that makes it able to load WSZ
files and display a skinned window that works just like the original --
with some caveats.

This is just a draft change, so a lot of things are missing:
- The marquee is not implemented, so the song title, duration, etc,
  won't be displayeed.
- Similarly, the bitrate and sample rate display is empty.
- No equalizer exists.
- Shuffling the playlist doesn't work.
- Can't minimize, shade, or close the window using the controls.
- Can't open the window context menu by clicking in the window icon.
- Window doesn't show up in the task bar.
- Audio balance doesn't work.
- Playlist management in the interface lacks all basic options.
- Playlist window isn't themed.
- Can't cycle through visualizations (only bars at the moment).
- Colors for bar visualization are parsed from theme but not used yet.
- Playing/paused/stopped indicators isn't fully synchronized.
- I'm unsure if all sprite offsets are correct. Most of them were
  eyeballed.

Fixing some of these things would require changes deeper in the system,
including teaching WindowServer about frameless windows that can be
shown in the task bar, teach the audio server the ability to change
the balance per connection, teach the audio server about sound
equalization, etc.

The other things is just more work, but I'm quite tired and it's
unlikely I'll finish this sometime soon.

Another major issue is the distribution of the WinAmp 2.91x base skin.
Currently, the build system will download it and install during base
system installation, but this isn't optimal regarding licensing; a
person on Twitter mentioned it's licensed under a "BSD/Zlib ish"
license, but couldn't find any official sources.  Might be better to
download some other skin that we know we can distribute, such as the
XMMS ski

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -144,7 +144,8 @@ jobs:
             -DCMAKE_CXX_COMPILER=g++-10 \
             -DENABLE_ALL_DEBUG_FACILITIES=ON \
             -DENABLE_PCI_IDS_DOWNLOAD=OFF \
-            -DENABLE_USB_IDS_DOWNLOAD=OFF
+            -DENABLE_USB_IDS_DOWNLOAD=OFF \
+            -DENABLE_WINAMP_BASE_SKIN_DOWNLOAD=OFF
         if: ${{ matrix.debug-options == 'ALL_DEBUG' }}
       - name: Create build environment
         working-directory: ${{ github.workspace }}
@@ -158,7 +159,8 @@ jobs:
             -DCMAKE_CXX_COMPILER=g++-10 \
             -DENABLE_UNDEFINED_SANITIZER=ON \
             -DENABLE_PCI_IDS_DOWNLOAD=OFF \
-            -DENABLE_USB_IDS_DOWNLOAD=OFF
+            -DENABLE_USB_IDS_DOWNLOAD=OFF \
+            -DENABLE_WINAMP_BASE_SKIN_DOWNLOAD=OFF
         if: ${{ matrix.debug-options == 'NORMAL_DEBUG' }}
 
       # === ACTUALLY BUILD ===
