--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,3 +298,17 @@ if(EXISTS ${USB_IDS_GZ_PATH} AND NOT EXISTS ${USB_IDS_INSTALL_PATH})
     file(MAKE_DIRECTORY ${CMAKE_INSTALL_DATAROOTDIR})
     file(RENAME ${USB_IDS_PATH} ${USB_IDS_INSTALL_PATH})
 endif()
+
+set(WINAMP_SKIN_ZIP_URL https://cdn.webampskins.org/skins/5e4f10275dcb1fb211d4a8b4f1bda236.wsz)
+set(WINAMP_SKIN_ZIP_PATH ${CMAKE_BINARY_DIR}/base-2.91.wsz)
+set(WINAMP_SKIN_ZIP_INSTALL_PATH ${CMAKE_INSTALL_DATAROOTDIR}/skins/base-2.91.wsz)
+
+if(ENABLE_WINAMP_BASE_SKIN_DOWNLOAD AND NOT EXISTS ${WINAMP_SKIN_ZIP_PATH})
+    message(STATUS "Downloading WinAmp skin from ${WINAMP_SKIN_ZIP_URL}...")
+    file(DOWNLOAD ${WINAMP_SKIN_ZIP_URL} ${WINAMP_SKIN_ZIP_PATH} INACTIVITY_TIMEOUT 10)
+endif()
+
+if(EXISTS ${WINAMP_SKIN_ZIP_PATH} AND NOT EXISTS ${WINAMP_SKIN_ZIP_INSTALL_PATH})
+    file(MAKE_DIRECTORY ${CMAKE_INSTALL_DATAROOTDIR}/skins)
+    file(COPY ${WINAMP_SKIN_ZIP_PATH} ${WINAMP_SKIN_ZIP_INSTALL_PATH})
+endif()
