Audio: Various access restrictions
These are a collection of security mitigations that limit how programs
can interact with the audio subsystem. Playing audio to the audio device
is now limited to the new audio user, which AudioServer runs as.
Connecting to the AudioServer is restricted to the audio group, which
anon is a part of.

This results in two additional changes: First, the audio server no
longer writes its own config files and uses ConfigServer instead (good).
Second, ConfigServer is now accessible by everyone, as audio is not part
of the users group (bad?). There is no way of changing this unless
either (1) ConfigServer writes to a directory that isn't only
read/writable by anon, or (2) all of the above changes are reverted. I
consider this an acceptable compromise.

--- a/Base/etc/SystemServer.ini
+++ b/Base/etc/SystemServer.ini
@@ -1,6 +1,7 @@
 [ConfigServer]
 Socket=/tmp/portal/config
-SocketPermissions=600
+# FIXME: AudioServer needs to connect to this.
+SocketPermissions=666
 User=anon
 
 [RequestServer]
@@ -129,9 +130,10 @@ User=anon
 [AudioServer]
 # TODO: It would be nice to make this lazy, but Audio.Applet connects to it immediately on startup anyway.
 Socket=/tmp/portal/audio
+SocketPermissions=660
 Priority=high
 KeepAlive=1
-User=anon
+User=audio
 BootModes=text,graphical
 
 [Taskbar]
