Kernel/Graphics: Set GraphicsManagement console properly
Instead of directly setting the Console member of GraphicsManagement,
let's leverage the AK::Badge construct to only allow GraphicsDevices to
set the Console.
This is not ideal, but it works for now as it worked before. It's just
less uglier than before.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -75,6 +75,7 @@ set(KERNEL_SOURCES
     Graphics/Console/TextModeConsole.cpp
     Graphics/Console/VGAConsole.cpp
     Graphics/FramebufferDevice.cpp
+    Graphics/GraphicsDevice.cpp
     Graphics/GraphicsManagement.cpp
     Graphics/Intel/NativeGraphicsAdapter.cpp
     Graphics/VirtIOGPU/FrameBufferDevice.cpp
