Kernel/Modules: Allow to opt-out from compiling various graphics drivers

--- a/Kernel/config.ini.template
+++ b/Kernel/config.ini.template
@@ -7,3 +7,7 @@ COMPILE_E1000E=y
 COMPILE_RTL8139=y
 COMPILE_RTL8168=y
 COMPILE_NE2000=y
+
+COMPILE_BOCHS_GRAPHICS=y
+COMPILE_INTEL_GRAPHICS=y
+COMPILE_VIRTIO_GRAPHICS=y
