Prekernel: Install EL1 vector table at boot on aarch64
We now have a function to install a (currently default) vector
table, meaning that any exceptions (or interrupts for that matter)
will be caught by the processor and routed to one of the vectors
inside the table.

--- a/Kernel/Prekernel/CMakeLists.txt
+++ b/Kernel/Prekernel/CMakeLists.txt
@@ -14,6 +14,7 @@ if ("${SERENITY_ARCH}" STREQUAL "aarch64")
         Arch/aarch64/Aarch64_asm_utils.S
         Arch/aarch64/boot.S
         Arch/aarch64/init.cpp
+        Arch/aarch64/vector_table.S
     )
 else()
     set(SOURCES
