LibWeb: Add WindowEventHandlers
While I was implementing the host hook overrides in LibWeb, I noticed
we didn't have WindowEventHandlers e.g. onunhandledrejection.

--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -189,6 +189,7 @@ set(SOURCES
     HTML/SyntaxHighlighter/SyntaxHighlighter.cpp
     HTML/TagNames.cpp
     HTML/WebSocket.cpp
+    HTML/WindowEventHandlers.cpp
     HighResolutionTime/Performance.cpp
     InProcessWebView.cpp
     IntersectionObserver/IntersectionObserver.cpp
