SystemServer: Group sockets into 'system' and 'user' mode
This commit changes a lot how SystemServer sockets are placed. First
of all, they are separated into 'system' and 'user' groups.
The 'system' sockets are placed in /tmp/portal/system and 'user'
in /tmp/portal/<sid>. The LoginServer is responsible for creating
a portal directory for session. The user's SystemServer places all
its sockets in user portal directory.

All services that had previously
run as 'anon' have been moved to `/etc/SystemServer.user.ini` file.

--- a/Base/etc/SystemServer.ini
+++ b/Base/etc/SystemServer.ini
@@ -1,58 +1,5 @@
-[ConfigServer]
-Socket=/tmp/portal/config
-SocketPermissions=600
-User=anon
-
-[RequestServer]
-Socket=/tmp/portal/request
-SocketPermissions=600
-Lazy=true
-Priority=low
-User=anon
-SystemModes=text,graphical
-MultiInstance=true
-AcceptSocketConnections=true
-
-[FileSystemAccessServer]
-Socket=/tmp/portal/filesystemaccess
-SocketPermissions=660
-Lazy=true
-Priority=low
-User=anon
-SystemModes=text,graphical
-MultiInstance=true
-AcceptSocketConnections=true
-
-[WebContent]
-Socket=/tmp/portal/webcontent
-SocketPermissions=600
-Lazy=true
-User=anon
-SystemModes=graphical
-MultiInstance=true
-AcceptSocketConnections=true
-
-[ImageDecoder]
-Socket=/tmp/portal/image
-SocketPermissions=600
-Lazy=true
-User=anon
-SystemModes=graphical
-MultiInstance=true
-AcceptSocketConnections=true
-
-[WebSocket]
-Socket=/tmp/portal/websocket
-SocketPermissions=600
-Lazy=true
-Priority=low
-User=anon
-SystemModes=text,graphical
-MultiInstance=true
-AcceptSocketConnections=true
-
 [LookupServer]
-Socket=/tmp/portal/lookup
+Socket=lookup
 SocketPermissions=660
 Priority=low
 KeepAlive=true
@@ -65,47 +12,29 @@ KeepAlive=true
 User=root
 SystemModes=text,graphical,self-test
 
-[NotificationServer]
-Socket=/tmp/portal/notify
-SocketPermissions=600
-Lazy=true
-Priority=low
+# FIXME: This is here to allow printing backtraces when no session is created. The user
+# should probably be changed to something else.
+[CrashDaemon]
 KeepAlive=true
 User=anon
 
-[LaunchServer]
-Socket=/tmp/portal/launch
+# FIXME: LoginServer probably doesn't need clipboard. Make LibGUI aware about this.
+# (Or bring back the clipboard user)
+[Clipboard]
+Socket=clipboard
 SocketPermissions=600
 Lazy=true
+SocketPermissions=660
+Priority=low
 User=anon
 SystemModes=text,graphical
 
 [WindowServer]
-Socket=/tmp/portal/window,/tmp/portal/wm
+Socket=window,wm
 SocketPermissions=660
 Priority=high
 KeepAlive=true
 User=window
-
-[InspectorServer]
-Socket=/tmp/portal/inspector,/tmp/portal/inspectables
-SocketPermissions=600,666
-KeepAlive=true
-User=anon
-
-[Clipboard]
-Socket=/tmp/portal/clipboard
-SocketPermissions=600
-Priority=low
-User=anon
-
-[AudioServer]
-# TODO: It would be nice to make this lazy, but Audio.Applet connects to it immediately on startup anyway.
-Socket=/tmp/portal/audio
-Priority=high
-KeepAlive=true
-User=anon
-SystemModes=text,graphical
 
 [Shell@tty0]
 Executable=/bin/Shell
@@ -120,37 +49,6 @@ StdIO=/dev/tty1
 Environment=TERM=xterm
 KeepAlive=true
 SystemModes=text
-
-[CppLanguageServer]
-Socket=/tmp/portal/language/cpp
-SocketPermissions=600
-Lazy=true
-User=anon
-MultiInstance=true
-AcceptSocketConnections=true
-
-[ShellLanguageServer]
-Socket=/tmp/portal/language/shell
-SocketPermissions=600
-Lazy=true
-User=anon
-MultiInstance=true
-AcceptSocketConnections=true
-
-[SQLServer]
-Socket=/tmp/portal/sql
-SocketPermissions=600
-Priority=low
-Lazy=true
-User=anon
-
-[CrashDaemon]
-KeepAlive=true
-User=anon
-
-[KeyboardPreferenceLoader]
-KeepAlive=false
-User=anon
 
 [TestRunner@ttyS0]
 Executable=/home/anon/tests/run-tests-and-shutdown.sh
