--- a/Base/etc/SystemServer.user.ini
+++ b/Base/etc/SystemServer.user.ini
@@ -1,3 +1,98 @@
+[ConfigServer]
+Socket=config
+SocketPermissions=600
+
+[RequestServer]
+Socket=request
+SocketPermissions=600
+Lazy=true
+Priority=low
+SystemModes=text,graphical
+MultiInstance=true
+AcceptSocketConnections=true
+
+[FileSystemAccessServer]
+Socket=filesystemaccess
+SocketPermissions=660
+Lazy=true
+Priority=low
+SystemModes=text,graphical
+MultiInstance=true
+AcceptSocketConnections=true
+
+[WebContent]
+Socket=webcontent
+SocketPermissions=600
+Lazy=true
+SystemModes=graphical
+MultiInstance=true
+AcceptSocketConnections=true
+
+[ImageDecoder]
+Socket=image
+SocketPermissions=600
+Lazy=true
+SystemModes=graphical
+MultiInstance=true
+AcceptSocketConnections=true
+
+[WebSocket]
+Socket=websocket
+SocketPermissions=600
+Lazy=true
+Priority=low
+SystemModes=text,graphical
+MultiInstance=true
+AcceptSocketConnections=true
+
+[NotificationServer]
+Socket=notify
+SocketPermissions=600
+Lazy=true
+Priority=low
+KeepAlive=true
+
+[LaunchServer]
+Socket=launch
+SocketPermissions=600
+Lazy=true
+SystemModes=text,graphical
+
+[InspectorServer]
+Socket=inspector,inspectables
+SocketPermissions=600,666
+KeepAlive=true
+
+[AudioServer]
+# TODO: It would be nice to make this lazy, but Audio.Applet connects to it immediately on startup anyway.
+Socket=audio
+Priority=high
+KeepAlive=true
+SystemModes=text,graphical
+
+[CppLanguageServer]
+Socket=language/cpp
+SocketPermissions=600
+Lazy=true
+MultiInstance=true
+AcceptSocketConnections=true
+
+[ShellLanguageServer]
+Socket=language/shell
+SocketPermissions=600
+Lazy=true
+MultiInstance=true
+AcceptSocketConnections=true
+
+[SQLServer]
+Socket=sql
+SocketPermissions=600
+Priority=low
+Lazy=true
+
+[KeyboardPreferenceLoader]
+KeepAlive=false
+
 [Taskbar]
 KeepAlive=true
 
