--- a/Base/etc/WindowServer.ini
+++ b/Base/etc/WindowServer.ini
@@ -20,6 +20,7 @@ Name=Default
 AccelerationFactor=1.0
 ScrollStepSize=4
 CursorTheme=Default
+ButtonsSwitched=false
 
 [Graphics]
 OverlayRectShadow=/res/graphics/overlay-rect-shadow.png
