--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -110,4 +110,5 @@ target_link_libraries(cpp-parser LibCpp LibGUI)
 target_link_libraries(cpp-preprocessor LibCpp LibGUI)
 target_link_libraries(w LibMain)
 target_link_libraries(wasm LibWasm LibLine)
+target_link_libraries(watch LibMain)
 target_link_libraries(wsctl LibGUI)
