PixelPaint: Add ResizeImageDialog and Image -> Resize menu action

--- a/Userland/Applications/PixelPaint/CMakeLists.txt
+++ b/Userland/Applications/PixelPaint/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
     PaletteWidget.cpp
     PixelPaintWindowGML.h
     ProjectLoader.cpp
+    ResizeImageDialog.cpp
     Selection.cpp
     ToolPropertiesWidget.cpp
     ToolboxWidget.cpp
