WindowServer: Add backend support for a global menu bar
Co-authored-by: implicitfield <114500360+implicitfield@users.noreply.github.com>

--- a/Userland/Services/WindowServer/CMakeLists.txt
+++ b/Userland/Services/WindowServer/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
     Compositor.cpp
     Cursor.cpp
     EventLoop.cpp
+    GlobalMenu.cpp
     main.cpp
     Menu.cpp
     Menubar.cpp
