--- a/Base/home/anon/.config/Taskbar.ini
+++ b/Base/home/anon/.config/Taskbar.ini
@@ -6,3 +6,6 @@ Browser=0:Browser.af
 FileManager=1:FileManager.af
 Terminal=2:Terminal.af
 TextEditor=3:TextEditor.af
+
+[GlobalMenu]
+Enabled=false
