--- a/Userland/Applications/PixelPaint/CMakeLists.txt
+++ b/Userland/Applications/PixelPaint/CMakeLists.txt
@@ -5,12 +5,12 @@ serenity_component(
     DEPENDS ImageDecoder FileSystemAccessServer
 )
 
-compile_gml(PixelPaintWindow.gml PixelPaintWindowGML.h pixel_paint_window_gml)
-compile_gml(EditGuideDialog.gml EditGuideDialogGML.h edit_guide_dialog_gml)
-compile_gml(FilterGallery.gml FilterGalleryGML.h filter_gallery_gml)
-compile_gml(ResizeImageDialog.gml ResizeImageDialogGML.h resize_image_dialog_gml)
-compile_gml(LevelsDialog.gml LevelsDialogGML.h levels_dialog_gml)
-compile_gml(Filters/MedianSettings.gml Filters/MedianSettingsGML.h median_settings_gml)
+stringify_gml(PixelPaintWindow.gml PixelPaintWindowGML.h pixel_paint_window_gml)
+stringify_gml(EditGuideDialog.gml EditGuideDialogGML.h edit_guide_dialog_gml)
+stringify_gml(FilterGallery.gml FilterGalleryGML.h filter_gallery_gml)
+stringify_gml(ResizeImageDialog.gml ResizeImageDialogGML.h resize_image_dialog_gml)
+stringify_gml(LevelsDialog.gml LevelsDialogGML.h levels_dialog_gml)
+stringify_gml(Filters/MedianSettings.gml Filters/MedianSettingsGML.h median_settings_gml)
 
 set(SOURCES
     CreateNewImageDialog.cpp
