LibWeb: Move static function out of line
This file is used in multiple places, and does not seem to be
performance-critical. This also makes the following compile again:

    #include <LibWeb/Painting/InputColors.h>

--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -435,6 +435,7 @@ set(SOURCES
     Painting/FilterPainting.cpp
     Painting/ImagePaintable.cpp
     Painting/InlinePaintable.cpp
+    Painting/InputColors.cpp
     Painting/LabelablePaintable.cpp
     Painting/MarkerPaintable.cpp
     Painting/NestedBrowsingContextPaintable.cpp
