Kernel/HID: Introduce initial USB mouse support

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -72,6 +72,7 @@ set(KERNEL_SOURCES
     Devices/HID/KeyboardDevice.cpp
     Devices/HID/Management.cpp
     Devices/HID/MouseDevice.cpp
+    Devices/HID/USB/MouseDevice.cpp
     Graphics/Bochs/GraphicsAdapter.cpp
     Graphics/Bochs/QEMUDisplayConnector.cpp
     Graphics/Console/BootFramebufferConsole.cpp
