Kernel/SerialIO: Introduce basic PS2 core for device detection
Instead of hardcoding initialization paths in the i8042 controller code,
we could just have very abstracted basic PS2 core for detecting devices
on PS2 controllers, with no ties to the i8042 code (or any other future
implementation).

Each device driver has a responsibility for detecting if it supports the
given PS2DeviceType value, and if that's the case it should continue
with the initialization sequence, which might have specific details to
handle per device.
To ensure this can be done safely, a new abstraction layer was added for
PS2Controller objects - now the PS2 core code can acquire spinlocks for
specific PS2 ports and initiate PS2 commands while holding a lock on
that port, ensuring that assumptions based on results from a previous
command result are actually valid during an initialization sequence.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -27,6 +27,8 @@ set(KERNEL_SOURCES
     Bus/PCI/API.cpp
     Bus/PCI/Device.cpp
     Bus/PCI/DeviceIdentifier.cpp
+    Bus/SerialIO/PS2/Controller.cpp
+    Bus/SerialIO/PS2/Device.cpp
     Bus/USB/UHCI/UHCIController.cpp
     Bus/USB/UHCI/UHCIRootHub.cpp
     Bus/USB/USBConfiguration.cpp
