SpiceAgent: Let's start rewriting the messaging system :^)

--- a/Userland/Services/SpiceAgent/CMakeLists.txt
+++ b/Userland/Services/SpiceAgent/CMakeLists.txt
@@ -5,6 +5,8 @@ serenity_component(
 
 set(SOURCES
     main.cpp
+    Message.cpp
+    MessageHeader.cpp
     SpiceAgent.cpp
     ConnectionToClipboardServer.cpp
 )
