--- a/Userland/Services/SpiceAgent/CMakeLists.txt
+++ b/Userland/Services/SpiceAgent/CMakeLists.txt
@@ -8,9 +8,8 @@ set(SOURCES
     Message.cpp
     MessageHeader.cpp
     SpiceAgent.cpp
-    ConnectionToClipboardServer.cpp
 )
 
 serenity_bin(SpiceAgent)
-target_link_libraries(SpiceAgent PRIVATE LibGfx LibCore LibIPC LibMain)
+target_link_libraries(SpiceAgent PRIVATE LibCore LibGfx LibGUI LibMain)
 add_dependencies(SpiceAgent Clipboard)
