--- a/AK/Debug.h.in
+++ b/AK/Debug.h.in
@@ -282,6 +282,10 @@
 #    cmakedefine01 LOOKUPSERVER_DEBUG
 #endif
 
+#ifndef LZMA_DEBUG
+#    cmakedefine01 LZMA_DEBUG
+#endif
+
 #ifndef MALLOC_DEBUG
 #    cmakedefine01 MALLOC_DEBUG
 #endif
