AK: Modify min/max functions to return by ref or value
Current implementations return by value and deviate from C++ standard,
where these functions return by ref.

While suboptimal, this avoids the case of returning a dangling ref in
calls like ```min(3, 5);```

The fix introduces two variants for each function:
- lvalue variant will return by ref/const ref if both args are lvalues.
- rvalue variant will return by value if at least one arg is a prvalue.

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -50,6 +50,7 @@ set(AK_TEST_SOURCES
     TestMACAddress.cpp
     TestMemory.cpp
     TestMemoryStream.cpp
+    TestMinMax.cpp
     TestNeverDestroyed.cpp
     TestNonnullOwnPtr.cpp
     TestNonnullRefPtr.cpp
