Documentation: Updated NvimConfiguration.md to support LSP Config
Updated NvimConfiguration.md to support LspConfig and common Nvim
LSP configurations. There are some subtle differences when setting
clangd using LspConfig and hopefully this will save people some
headache when configuring Neovim to work with serenity

I added the `.nvim.lua` to the `.gitignore` because those using
similar confiurations would not want to commit this.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ run-local.sh
 sync-local.sh
 .vim/
 .exrc
+.nvim.lua
 
 Userland/Libraries/LibWasm/Tests/Fixtures/SpecTests
 Userland/Libraries/LibWasm/Tests/Spec
