--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -520,6 +520,7 @@ set(SOURCES
     SVG/SVGSVGElement.cpp
     SVG/SVGStopElement.cpp
     SVG/SVGTextContentElement.cpp
+    SVG/SVGUseElement.cpp
     SVG/TagNames.cpp
     SVG/ViewBox.cpp
     Selection/Selection.cpp
