LibX86: Rename to LibDisassembly
Before making this library generic for our different architectures,
let's rename it to indicate this general purpose. The namespace is
changed to Disassembly::X86 since all code is still x86-specific at the
moment, and this namespace will remain in existence to host x86-specific
parts in addition to new sub-namespaces like Disassembly::RISCV and
Disassembly::Aarch64.

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -535,7 +535,7 @@ if (BUILD_LAGOM)
     endif()
 
     if (NOT EMSCRIPTEN)
-        list(APPEND lagom_standard_libraries X86)
+        list(APPEND lagom_standard_libraries Disassembly)
     endif()
 
     foreach(lib IN LISTS lagom_standard_libraries)
@@ -579,7 +579,7 @@ if (BUILD_LAGOM)
         lagom_utility(base64 SOURCES ../../Userland/Utilities/base64.cpp LIBS LibMain)
 
         if (NOT EMSCRIPTEN)
-            lagom_utility(disasm SOURCES ../../Userland/Utilities/disasm.cpp LIBS LibELF LibX86 LibMain)
+            lagom_utility(disasm SOURCES ../../Userland/Utilities/disasm.cpp LIBS LibELF LibDisassembly LibMain)
             lagom_utility(file SOURCES ../../Userland/Utilities/file.cpp LIBS LibAudio LibArchive LibCompress LibELF LibGfx LibIPC LibMain)
         endif()
 
