LibDisassembly: Add RISC-V instruction abstractions
These will be used later on by concrete instruction implementations.

--- a/Userland/Libraries/LibDisassembly/CMakeLists.txt
+++ b/Userland/Libraries/LibDisassembly/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     x86/Instruction.cpp
     riscv64/Encoding.cpp
     riscv64/Formatting.cpp
+    riscv64/Instruction.cpp
 )
 
 serenity_lib(LibDisassembly disassembly)
