LibDisassembly: Add RISC-V 64 base ISA instruction decoding
Actually, this is RV64IMZifencei and RV32IMZifencei:
- As per RISC-V, RV64I of course includes RV32I
- The M extension is not separable in a good way since it just adds more
  arithmetic instructions that are represented in a common class with
  other I instructions.
- Zifencei is just one instruction (FENCE.I) that doesn't need its own
  file.

--- a/Userland/Libraries/LibDisassembly/CMakeLists.txt
+++ b/Userland/Libraries/LibDisassembly/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCES
     riscv64/Encoding.cpp
     riscv64/Formatting.cpp
     riscv64/Instruction.cpp
+    riscv64/IM.cpp
 )
 
 serenity_lib(LibDisassembly disassembly)
