LibDisassembly: Add RV64C extension decoding
This does *not* support RV32C or RV128C, since those use the same
instructions for different purposes. We decode compressed instructions
into the same internal representation as their full counterparts, since
all compressed instructions have such an exact counterpart by design.

--- a/Userland/Libraries/LibDisassembly/CMakeLists.txt
+++ b/Userland/Libraries/LibDisassembly/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCES
     x86/Instruction.cpp
     riscv64/A.cpp
+    riscv64/C.cpp
     riscv64/Encoding.cpp
     riscv64/FD.cpp
     riscv64/Formatting.cpp
