Tests: Add RISC-V disassembly tests
There are two tests here, one for full RV64G coverage and one with the
asinh implementation from our libc. There's no dedicated C tests (though
C is tested plenty in asinh) since I've already spent over two days
writing these tests.

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -682,6 +682,7 @@ if (BUILD_LAGOM)
             AK
             LibCrypto
             LibCompress
+            LibDisassembly
             LibGL
             LibGfx
             LibHID
