--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(LibCore)
 add_subdirectory(LibCpp)
 add_subdirectory(LibDeviceTree)
 add_subdirectory(LibDiff)
+add_subdirectory(LibDisassembly)
 add_subdirectory(LibEDID)
 add_subdirectory(LibELF)
 add_subdirectory(LibGfx)
