--- a/Ladybird/WebContent/CMakeLists.txt
+++ b/Ladybird/WebContent/CMakeLists.txt
@@ -14,15 +14,27 @@ set(WEBCONTENT_SOURCES
     ../Utilities.cpp
 )
 
-set(LIB_TYPE STATIC)
-if (IOS)
-    set(LIB_TYPE SHARED)
+add_library(webcontent STATIC ${WEBCONTENT_SOURCES})
+set_target_properties(webcontent PROPERTIES AUTOMOC OFF AUTORCC OFF AUTOUIC OFF)
+
+target_include_directories(webcontent PUBLIC ${SERENITY_SOURCE_DIR}/Userland/Services/)
+target_include_directories(webcontent PUBLIC ${SERENITY_SOURCE_DIR}/Userland/)
+target_include_directories(webcontent PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/..)
+target_link_libraries(webcontent PUBLIC LibAudio LibCore LibFileSystem LibGfx LibIPC LibJS LibMain LibWeb LibWebSocket LibProtocol LibWebView LibImageDecoderClient)
+
+if (HAVE_PULSEAUDIO)
+    target_compile_definitions(webcontent PUBLIC HAVE_PULSEAUDIO=1)
 endif()
-add_library(webcontent ${LIB_TYPE} ${WEBCONTENT_SOURCES})
-target_include_directories(webcontent PRIVATE ${SERENITY_SOURCE_DIR}/Userland/Services/)
-target_include_directories(webcontent PRIVATE ${SERENITY_SOURCE_DIR}/Userland/)
-target_include_directories(webcontent PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/..)
-target_link_libraries(webcontent PRIVATE LibAudio LibCore LibFileSystem LibGfx LibIPC LibJS LibMain LibWeb LibWebSocket LibProtocol LibWebView LibImageDecoderClient)
+
+if (HAS_ACCELERATED_GRAPHICS)
+    target_compile_definitions(webcontent PUBLIC HAS_ACCELERATED_GRAPHICS)
+    target_link_libraries(webcontent PUBLIC LibAccelGfx)
+endif()
+
+add_executable(WebContent main.cpp)
+
+target_link_libraries(WebContent PRIVATE webcontent LibSQL LibURL)
+
 target_sources(webcontent PUBLIC FILE_SET ladybird TYPE HEADERS
     BASE_DIRS ${SERENITY_SOURCE_DIR}
     FILES ../FontPlugin.h
@@ -37,27 +49,3 @@ target_sources(webcontent PUBLIC FILE_SET server TYPE HEADERS
           ${WEBCONTENT_SOURCE_DIR}/WebContentConsoleClient.h
           ${WEBCONTENT_SOURCE_DIR}/WebDriverConnection.h
 )
-
-add_executable(WebContent main.cpp)
-target_link_libraries(WebContent PRIVATE webcontent)
-
-target_include_directories(WebContent PRIVATE ${SERENITY_SOURCE_DIR}/Userland/Services/)
-target_include_directories(WebContent PRIVATE ${SERENITY_SOURCE_DIR}/Userland/)
-target_include_directories(WebContent PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/..)
-target_link_libraries(WebContent PRIVATE LibAudio LibCore LibFileSystem LibGfx LibImageDecoderClient LibIPC LibJS LibMain LibSQL LibWeb LibWebSocket LibProtocol LibWebView LibURL)
-
-if (HAVE_PULSEAUDIO)
-    target_compile_definitions(WebContent PRIVATE HAVE_PULSEAUDIO=1)
-    if (TARGET webcontent)
-        target_compile_definitions(webcontent PRIVATE HAVE_PULSEAUDIO=1)
-    endif()
-endif()
-
-if (HAS_ACCELERATED_GRAPHICS)
-    target_compile_definitions(WebContent PRIVATE HAS_ACCELERATED_GRAPHICS)
-    target_link_libraries(WebContent PRIVATE LibAccelGfx)
-    if (TARGET webcontent)
-        target_compile_definitions(webcontent PRIVATE HAS_ACCELERATED_GRAPHICS)
-        target_link_libraries(webcontent PRIVATE LibAccelGfx)
-    endif()
-endif()
