Tests: Annotate reasons for skipping LibWeb tests
Eventually we want to stop skipping these, so it's helpful to know why
they were skipped in the first place. :^)

I've grouped them together by reason, so the order has changed a little.

For some of these the reason isn't clear.

(cherry picked from commit a8b3d363ccee3f987312fbf8eb3c62a8f7e9b683;
amended to fix conflicts due to us not importing WPT tests, and due
to us not having LadybirdBrowser/ladybird#2175 yet)

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -1,13 +1,20 @@
 [Skipped]
+; Consistently hang on macOS, see LadybirdBrowser/ladybird#1306
+Text/input/HTML/cross-origin-window-properties.html
+Text/input/HTML/DedicatedWorkerGlobalScope-instanceof.html
+Text/input/window-scrollTo.html
+
+; Flaky on CI
 Ref/css-keyframe-fill-forwards.html
 Ref/unicode-range.html
 Text/input/Crypto/SubtleCrypto-exportKey.html
 Text/input/Crypto/SubtleCrypto-generateKey.html
 Text/input/css/transition-basics.html
-Text/input/HTML/cross-origin-window-properties.html
-Text/input/HTML/DedicatedWorkerGlobalScope-instanceof.html
+
+; Flaky on CI, see LadybirdBrowser/ladybird#19
 Text/input/WebAnimations/misc/DocumentTimeline.html
-Text/input/window-scrollTo.html
+
+; Worker tests are flaky on CI
 Text/input/Worker/Worker-blob.html
 Text/input/Worker/Worker-close-after-postMessage.html
 Text/input/Worker/Worker-crypto.html
