Tests: Disable a worker test that's flaky on macOS
Consistently times out locally, but not on CI somehow.

(cherry picked from commit 971c04d4130d1110ee4db3cf358f38ea84a39a2b)

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -2,6 +2,7 @@
 ; Consistently hang on macOS, see LadybirdBrowser/ladybird#1306
 Text/input/HTML/cross-origin-window-properties.html
 Text/input/HTML/DedicatedWorkerGlobalScope-instanceof.html
+Text/input/HTML/MessagePort-MessageEvents-should-be-trusted.html
 Text/input/window-scrollTo.html
 
 ; Flaky on CI
