Meta: Check and format Python with Ruff in pre-commit config
While not all style problems can be fixed by Ruff, using ruff check
--fix still reduces the effort for Python contributors, as like with
code formatting they don’t have to fix trivial linter violations if
their code fails the check.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       run: |
         python3 -m pip install --upgrade pip
-        pip3 install flake8 requests six
+        pip3 install ruff requests six
 
     - name: 'Install Dependencies'
       if: ${{ inputs.os == 'Serenity' }}
