Kernel: Rename HID* to Input*
The term "Human Interface Device" (HID) is commonly used for the HID
specification specifically, not just input devices in general.

Also remove the "HID" prefix from the "HIDMouse" and "HIDKeyboard"
DeviceMapper.ini configuration groups, since it's unnecessary and
misleading.

The next few commits will introduce actual HID support, so the naming
would otherwise get confusing.

--- a/Base/etc/DeviceMapper.ini
+++ b/Base/etc/DeviceMapper.ini
@@ -30,7 +30,7 @@ MajorNumber=229
 GroupPermissions=root
 CreatePermissions=0666
 
-[HIDMouse]
+[Mouse]
 Name=mouse
 DevTmpFSPath=input/mouse/%d
 Type=CharacterDevice
@@ -38,7 +38,7 @@ MajorNumber=10
 GroupPermissions=phys
 CreatePermissions=0660
 
-[HIDKeyboard]
+[Keyboard]
 Name=keyboard
 DevTmpFSPath=input/keyboard/%d
 Type=CharacterDevice
