--- a/Meta/gn/secondary/AK/BUILD.gn
+++ b/Meta/gn/secondary/AK/BUILD.gn
@@ -294,6 +294,7 @@ write_cmake_config("ak_debug_gen") {
     "JBIG2_DEBUG=",
     "JPEG_DEBUG=",
     "JPEG2000_DEBUG=",
+    "JPEGXL_DEBUG=",
     "JS_BYTECODE_DEBUG=",
     "JS_MODULE_DEBUG=",
     "KEYBOARD_SHORTCUTS_DEBUG=",
