Kernel/aarch64: Add basic support for PSCI and HVC calls
This makes it possible to shut down and reboot the QEMU virt machine.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -508,6 +508,7 @@ elseif("${SERENITY_ARCH}" STREQUAL "aarch64")
         Arch/aarch64/Interrupts.cpp
         Arch/aarch64/Interrupts/GIC.cpp
         Arch/aarch64/MainIdRegister.cpp
+        Arch/aarch64/PSCI.cpp
         Arch/aarch64/PageDirectory.cpp
         Arch/aarch64/Processor.cpp
         Arch/aarch64/PowerState.cpp
