AK: Implement AK::SyncGenerator

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -84,6 +84,7 @@ set(AK_TEST_SOURCES
     TestStringFloatingPointConversions.cpp
     TestStringUtils.cpp
     TestStringView.cpp
+    TestSyncGenerator.cpp
     TestDuration.cpp
     TestTrie.cpp
     TestTuple.cpp
