Kernel/USB: Add USB HID transport driver
This driver uses the new HID infrastructure introduced in the last
commit.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -39,6 +39,7 @@ set(KERNEL_SOURCES
     Bus/USB/xHCI/xHCIController.cpp
     Bus/USB/xHCI/xHCIInterrupter.cpp
     Bus/USB/xHCI/xHCIRootHub.cpp
+    Bus/USB/Drivers/HID.cpp
     Bus/USB/Drivers/HID/MouseDriver.cpp
     Bus/USB/Drivers/MassStorage/MassStorageDriver.cpp
     Bus/USB/USBConfiguration.cpp
