Kernel/Input: Add HID keyboard application collection driver
This driver doesn't do key repeat yet.

The keymap only contains entries for keys that we currently have
keycodes for.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -108,6 +108,7 @@ set(KERNEL_SOURCES
     Devices/GPU/VirtIO/GPU3DDevice.cpp
     Devices/GPU/VirtIO/GraphicsAdapter.cpp
     Devices/Input/HID/Device.cpp
+    Devices/Input/HID/KeyboardDriver.cpp
     Devices/Input/KeyboardDevice.cpp
     Devices/Input/Management.cpp
     Devices/Input/MouseDevice.cpp
