--- a/Kernel/Debug.h.in
+++ b/Kernel/Debug.h.in
@@ -99,6 +99,10 @@
 #cmakedefine01 FUTEXQUEUE_DEBUG
 #endif
 
+#ifndef HID_DEBUG
+#cmakedefine01 HID_DEBUG
+#endif
+
 #ifndef HPET_COMPARATOR_DEBUG
 #cmakedefine01 HPET_COMPARATOR_DEBUG
 #endif
