Kernel/aarch64: Add support for the PL031
With this, it's now possible to properly set the system time on boot
when using the QEMU virt machine.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -515,6 +515,7 @@ elseif("${SERENITY_ARCH}" STREQUAL "aarch64")
         Arch/aarch64/SafeMem.cpp
         Arch/aarch64/SmapDisabler.cpp
         Arch/aarch64/Time/ARMv8Timer.cpp
+        Arch/aarch64/Time/PL031.cpp
         Arch/aarch64/vector_table.S
 
         Arch/aarch64/PlatformInit/RaspberryPi.cpp
