Tests/HID: Add a simple boot protocol keyboard parse test
This tests both the report descriptor parser and the report parser
on a boot protocol keyboard report descriptor and report respectively.

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -684,6 +684,7 @@ if (BUILD_LAGOM)
             LibCompress
             LibGL
             LibGfx
+            LibHID
             LibHTTP
             LibIMAP
             LibLocale
