--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(LibELF)
 add_subdirectory(LibGfx)
 add_subdirectory(LibGL)
 add_subdirectory(LibGLSL)
+add_subdirectory(LibHID)
 add_subdirectory(LibIMAP)
 add_subdirectory(LibJS)
 add_subdirectory(LibLocale)
